Fixed gap issues between each sections headline subheadline

--- a/assets/css/_config.scss
+++ b/assets/css/_config.scss
@@ -6,8 +6,8 @@ $section-headline-font-size: 30px;
 $section-subheadline-font-size: 18px;
 $section-headline-font-weight: 600;
 $section-subheadline-font-weight: 400;
-$section-headline-line-height: 38px;
-$section-subheadline-line-height: 24px;
+$section-headline-line-height: 45px;
+$section-subheadline-line-height: 28px;
 
 $rating-star-size: 22px;
 $quotes-font-size: 24px;
