--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -45,7 +45,7 @@ ul {
 }
 
 .section-headline {
-	margin: 0px 300px;
+	margin: 0px 300px 30px;
 	font-weight: $section-headline-font-weight;
 	font-size: $section-headline-font-size;
 	line-height: $section-headline-line-height;
